BUTTON6MOUSE and BUTTON7MOUSE are not detected in blender for OSX #44612

Closed
opened 2015-05-05 20:58:57 +02:00 by Carlos Hernandez · 7 comments

System Information
OSX Yosemite ( 10.10.3 )
MacBook Late 2008
NVIDIA GeForce 9400M

Blender Version
Broken: 2.74
Worked: I haven't tested it on previous versions but I will check that out later

Short description of error
I have a Logitech G700s with 7 user available buttons to use. OSX detect the "Button 6" and "Button 7" mouse buttons but blender doesn't

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps
File -> User Preferences -> Input

Try to modify any binding with G6 and G7 buttons and blender recognizes them as Left Mouse

**System Information** OSX Yosemite ( 10.10.3 ) MacBook Late 2008 NVIDIA GeForce 9400M **Blender Version** Broken: 2.74 Worked: I haven't tested it on previous versions but I will check that out later **Short description of error** I have a Logitech G700s with 7 user available buttons to use. OSX detect the "Button 6" and "Button 7" mouse buttons but blender doesn't **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps File -> User Preferences -> Input Try to modify any binding with G6 and G7 buttons and blender recognizes them as Left Mouse

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @CarlosHernandezLavarreda

Added subscriber: @CarlosHernandezLavarreda

This issue was referenced by c641a5563f

This issue was referenced by c641a5563fa034b8faa4d1aaeba1258f9df2e19b

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit c641a5563f.

Closed by commit c641a5563f.

Added subscriber: @brecht

Added subscriber: @brecht

Thanks for the report, fixed now.

Thanks for the report, fixed now.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44612
No description provided.