Fix T44612: add support for mouse button 6 and 7 on OS X.